Fixed SkillCard issue where it didnt render properly on small screens

--- a/portfolio-web-frontend/Components/Styles/Skillcard.module.css
+++ b/portfolio-web-frontend/Components/Styles/Skillcard.module.css
@@ -1,5 +1,7 @@
 .SkillCard{
     border-radius: 1%;
+    max-width: 45vh;
+    min-height: 60vh;
 }
 .SkillCard-Base{
     background: var(--base-Primarycolor);
@@ -22,6 +24,7 @@
     height: 15%;
     margin-left: 10%;
     margin-top:  10%;
+    padding: 5% 0 5% 0;
     border-radius: 20%;
     display: flex;
     align-items: center;
